--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -45,6 +45,7 @@
     font-size: 4.3rem;
     line-height: 5rem;
     font-weight: 700;
+    max-width: 600px;
   }
 
   @media screen and (max-width: 450px) {
