--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,6 +4,7 @@
     user-select: none;
     background-color: var(--background2-color);
     z-index: 2;
+    padding-bottom: 4rem;
   }
   
   .app__contact-info {
