--- a/src/components/Work_pages/Work_1.scss
+++ b/src/components/Work_pages/Work_1.scss
@@ -1,44 +1,77 @@
-.app__work1{
+.work {
+  padding: 4rem 2rem;
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
+
+  &__hero {
+    text-align: center;
+    margin-bottom: 3rem;
+
+    & .work__title {
+      font-size: 3rem;
+      font-weight: 700;
+    }
+
+    & .work__subtitle {
+      font-size: 1.5rem;
+      color: #666;
+    }
+  }
+
+  &__overview,
+  &__features,
+  &__gallery,
+  &__cta {
+    margin-bottom: 2.5rem;
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    p, ul {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+
+    ul {
+      list-style-type: disc;
+      padding-left: 1.5rem;
+    }
+  }
+
+  &__images {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    gap: 1rem;
+    flex-wrap: wrap;
 
-    @media screen and (max-width: 900px) {
-      
-    }
+    img {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
 
-    @media screen and (max-width: 450px) {
-      font-size: 0.9rem;
+      &:hover {
+        transform: scale(1.05);
+      }
     }
+  }
+
+  &__cta {
+    text-align: center;
+
+    .work__button {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background-color: #28a745;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: #218838;
+      }
+    }
+  }
 }
-
-.app__work1-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 200px;
-    color: var(--green-color);
-    
-    &-title{
-        font-size: 3rem;
-        font-weight: 700;
-        margin-bottom: 1.5rem;
-        color: var(--green-color);
-        text-align: center;
-        text-transform: uppercase;
-        letter-spacing: 0.1rem;
-        font-family: 'Montserrat', sans-serif;
-    }
-    
-    &-description{
-        font-size: 1.2rem;
-        font-weight: 400;
-        color: #000;
-        text-align: center;
-        margin-bottom: 2rem;
-        font-family: 'Montserrat', sans-serif;
-    }
-}
-
